--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--注意：bottom_navigation.xml的高度为60dp，否则会导致底部导航栏与内容区域重叠-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="49dp"
     android:background="#FFFFFF"
     android:elevation="8dp"
     android:orientation="horizontal">
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="首页"
+            android:text="@string/tab_home"
             android:textColor="#000000"
             android:textSize="12sp" />
     </LinearLayout>
@@ -50,7 +50,8 @@
         android:gravity="center"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        android:alpha="0.6">
 
         <!--        <ImageView-->
         <!--            android:layout_width="24dp"-->
@@ -62,8 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="朋友"
-            android:textColor="#CCCCCC"
+            android:text="@string/tab_friends"
+            android:textColor="#161823"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -78,19 +79,22 @@
         tools:layout_editor_absoluteX="193dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <!--        <ImageView-->
-        <!--            android:layout_width="24dp"-->
-        <!--            android:layout_height="24dp"-->
-        <!--            android:src="@android:drawable/ic_menu_camera"-->
-        <!--            android:tint="#CCCCCC" />-->
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="相机"
-            android:textColor="#CCCCCC"
-            android:textSize="12sp" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:contentDescription="Add"
+            android:icon="@drawable/ic_new"
+            android:src="@drawable/ic_new"
+            app:tint="#000000" />
+        <!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="2dp"-->
+<!--            android:text="@string/tab_camera"-->
+<!--            android:textColor="#161823"-->
+<!--            android:textSize="12sp"-->
+<!--            android:alpha="0.6"/>-->
     </LinearLayout>
 
     <LinearLayout
@@ -114,9 +118,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="消息"
-            android:textColor="#CCCCCC"
-            android:textSize="12sp" />
+            android:text="@string/tab_messages"
+            android:textColor="#161823"
+            android:textSize="12sp"
+            android:alpha="0.6"/>
     </LinearLayout>
 
     <LinearLayout
@@ -139,8 +144,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="我的"
-            android:textColor="#000000"
-            android:textSize="12sp" />
+            android:text="@string/tab_profile"
+            android:textColor="#161823"
+            android:textSize="12sp"
+            android:alpha="0.6"/>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout >
