--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <!-- 顶部Tab栏 -->
     <LinearLayout
         android:id="@+id/top_tab_bar"
@@ -12,8 +12,15 @@
         android:layout_height="44dp"
         android:background="#FFFFFF"
         android:orientation="horizontal"
-        android:paddingHorizontal="16dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingHorizontal="16dp">
+        <ImageView
+            android:icon="@drawable/ic_sidebar"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/ic_sidebar"
+            app:tint="#000000" />
 
         <TextView
             android:id="@+id/tab_beijing"
@@ -71,8 +78,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="auto"
-            android:src="@android:drawable/ic_search_menu"
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/ic_search_menu"
             android:tint="#000000" />
     </LinearLayout>
 
@@ -80,8 +87,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#F0F0F0"
-        app:layout_constraintTop_toBottomOf="@id/top_tab_bar" />
+        android:background="#F0F0F0" />
 
     <!-- 瀑布流RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -89,8 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#F5F5F5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_tab_bar"
+        android:layout_weight="1"
         tools:listitem="@layout/item_post_card" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout >
