--- a/app/src/main/res/layout/item_post_card.xml
+++ b/app/src/main/res/layout/item_post_card.xml
@@ -16,13 +16,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <!-- 作品图片 -->
+<!--        <ImageView-->
+<!--            android:id="@+id/post_image"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            android:src="@drawable/image" />-->
         <ImageView
             android:id="@+id/post_image"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/image" />
+            android:layout_marginTop="8dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
