--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorAccent">#FF0000</color>
+    <color name="colorTextSecondary">#666666</color>
+    <color name="colorTextPrimary">#000000</color>
+    <color name="colorTabUnselected">#666666</color>
+    <color name="colorTabSelected">#FF0000</color>
 </resources>
