--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -56,24 +56,27 @@
 
         <!-- 关注按钮 -->
         <!-- 关注按钮 -->
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/follow_button"
-            android:layout_width="64dp"
-            android:layout_height="38dp"
+            android:layout_width="74dp"
+            android:layout_height="28dp"
             android:layout_marginEnd="16dp"
+            android:background="@drawable/button_follow_selector"
+            android:backgroundTint="@null"
             android:gravity="center"
             android:includeFontPadding="false"
             android:minWidth="60dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:text="关注"
-            android:textColor="#000000"
-            android:textSize="14sp"
+            android:singleLine="true"
+            android:textColor="@drawable/text_follow_selector"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-<!--        TODO,一加上background形状就变了-->
-<!--        android:background="@drawable/follow_button_bg"-->
+        <!--        TODO,一加上background形状就变了-->
+        <!--        android:background="@drawable/follow_button_bg"-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -93,7 +96,7 @@
             android:orientation="vertical">
 
             <!-- 图片容器 -->
-<!--            移除固定高度，改为wrap_content-->
+            <!--            移除固定高度，改为wrap_content-->
             <RelativeLayout
                 android:id="@+id/image_container"
                 android:layout_width="match_parent"
@@ -106,31 +109,31 @@
                     android:layout_height="wrap_content" />
 
                 <!-- 进度指示器 -->
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_alignBottom="@id/image_view_pager"-->
-<!--                    android:background="#80000000"-->
-<!--                    android:orientation="vertical"-->
-<!--                    android:padding="8dp">-->
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_alignBottom="@id/image_view_pager"-->
+                <!--                    android:background="#80000000"-->
+                <!--                    android:orientation="vertical"-->
+                <!--                    android:padding="8dp">-->
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/progress_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="center"-->
-<!--                        android:textColor="#FFFFFF"-->
-<!--                        android:textSize="12sp"-->
-<!--                        tools:text="1/3" />-->
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/progress_text"-->
+                <!--                        android:layout_width="wrap_content"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_gravity="center"-->
+                <!--                        android:textColor="#FFFFFF"-->
+                <!--                        android:textSize="12sp"-->
+                <!--                        tools:text="1/3" />-->
 
-<!--                    <ProgressBar-->
-<!--                        android:id="@+id/progress_bar"-->
-<!--                        style="@android:style/Widget.ProgressBar.Horizontal"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="2dp"-->
-<!--                        android:layout_marginTop="4dp"-->
-<!--                        android:progress="33" />-->
-<!--                </LinearLayout>-->
+                <!--                    <ProgressBar-->
+                <!--                        android:id="@+id/progress_bar"-->
+                <!--                        style="@android:style/Widget.ProgressBar.Horizontal"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="2dp"-->
+                <!--                        android:layout_marginTop="4dp"-->
+                <!--                        android:progress="33" />-->
+                <!--                </LinearLayout>-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -139,22 +142,22 @@
                     android:orientation="vertical"
                     android:padding="8dp">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/progress_text"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="center"-->
-<!--                        android:textColor="#FFFFFF"-->
-<!--                        android:textSize="12sp"-->
-<!--                        tools:text="1/3" />-->
+                    <!--                    <TextView-->
+                    <!--                        android:id="@+id/progress_text"-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:layout_gravity="center"-->
+                    <!--                        android:textColor="#FFFFFF"-->
+                    <!--                        android:textSize="12sp"-->
+                    <!--                        tools:text="1/3" />-->
 
                     <!-- 将单个ProgressBar替换为水平LinearLayout，用于放置小圆点指示器 -->
                     <LinearLayout
                         android:id="@+id/progress_dots_container"
                         android:layout_width="match_parent"
                         android:layout_height="8dp"
-                        android:gravity="center"
                         android:layout_marginTop="4dp"
+                        android:gravity="center"
                         android:orientation="horizontal"
                         android:weightSum="1" />
                 </LinearLayout>
@@ -261,24 +264,24 @@
         </LinearLayout>
 
         <!-- 评论按钮 -->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/comment_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:gravity="center"-->
-<!--            android:orientation="vertical"-->
-<!--            android:paddingHorizontal="12dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@id/collect_button"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/comment_button"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:gravity="center"-->
+        <!--            android:orientation="vertical"-->
+        <!--            android:paddingHorizontal="12dp"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toStartOf="@id/collect_button"-->
+        <!--            app:layout_constraintTop_toTopOf="parent">-->
 
 
-<!--            <ImageView-->
-<!--                android:layout_width="24dp"-->
-<!--                android:layout_height="24dp"-->
-<!--                android:contentDescription="评论"-->
-<!--                android:src="@android:drawable/ic_input_add" />-->
-<!--        </LinearLayout>-->
+        <!--            <ImageView-->
+        <!--                android:layout_width="24dp"-->
+        <!--                android:layout_height="24dp"-->
+        <!--                android:contentDescription="评论"-->
+        <!--                android:src="@android:drawable/ic_input_add" />-->
+        <!--        </LinearLayout>-->
 
         <LinearLayout
             android:id="@+id/comment_button"
@@ -298,7 +301,7 @@
                 android:src="@drawable/comment_icon" />
 
             <TextView
-                android:id="@+id/like_count"
+                android:id="@+id/comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
@@ -323,8 +326,9 @@
                 android:layout_height="24dp"
                 android:contentDescription="收藏"
                 android:src="@drawable/star_icon" />
+
             <TextView
-                android:id="@+id/like_count"
+                android:id="@+id/collect_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
@@ -349,8 +353,9 @@
                 android:layout_height="24dp"
                 android:contentDescription="分享"
                 android:src="@drawable/share_icon" />
+
             <TextView
-                android:id="@+id/like_count"
+                android:id="@+id/share_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
